--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 <body>
     <div class="top_container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        <img class="top-cloud" src="cloud.png" alt="cloud-image">
         <h1>I'm Shubham</h1>
         <h2>a <span class="pro">pro</span>grammer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-        <img class="mountain" src="images/mountain.png" alt="Mountain-image">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+        <img class="mountain" src="mountain.png" alt="Mountain-image">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="profile-picture" src="images/shubhamcircle.png" alt="Profile-picture">
+            <img class="profile-picture" src="shubhamcircle.png" alt="Profile-picture">
             <h2>Hello.</h2>
             <p class="intro">I am a Graphics Designer and Programmer. I'm the Founder of SHUBHPIXELS. I💖Coffee and Riding Bikes.</p>
         </div>
@@ -32,14 +32,14 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="designer-image" src="images/designer.png" alt="skills-image">
+                <img class="designer-image" src="designer.png" alt="skills-image">
                 <h3>Graphic Designing</h3>
                 <p class="designer-discription">I Started Learning Graphics Designing when i was in BCA First Year. I
                     wanted to edit my portrait pictures so I learned Photoshop. with this skill, I got some experience
                     and also makes some money. </p>
             </div>
             <div class="skill-row">
-                <img class="programming-image" src="images/programing.png" alt="chillies-image">
+                <img class="programming-image" src="programing.png" alt="chillies-image">
                 <h3>Programming</h3>
                 <p class="programming-description">I start Coding/Programming in 2021 when i was in last year of my
                     Graduation. Learned C Programming, Now I'm learning full stack web development by Angela yu. </p>
