--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>If you interesd in Graphics and programming.</h3>
-            <p class="interest">If you interesd in Graphics and programming? Let's talk about how awesome these topics. Meet you soon!
+            <p class="interest">If you interesd in Graphics and programming? Let's talk about how awesome these topics. Meet you in Mail Box!
             </p>
             <a class="btn" href="mailto:shubhambhairajput@gmail.com">CONTACT ME</a>
         </div>
